# sdnu-toolbox

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QLUToolboxWorker.spec  README.md  SDNUToolboxWorker.spec  SECURITY.md  build-installer.bat  build.bat  index.html  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
assets/: qlu-toolbox.icns
backend-build/SDNUToolboxWorker/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc
dist-renderer/: index.html
dist-renderer/assets/: index-0ARlY328.css  index-HoQ7kMXe.js
electron/: bridge.ts  main.ts  preload.cts  tsconfig.json
installer-assets/: installer.nsh
qlu_toolbox/: __init__.py  bridge.py
qlu_toolbox/core/: __init__.py  browser_component.py  metadata.py  paths.py  settings.py  tasks.py  tools.py
qlu_toolbox/modules/: __init__.py
qlu_toolbox/modules/gpa_calculator/: __init__.py  domain.py
qlu_toolbox/modules/grade_export/: __init__.py  domain.py  service.py  worker.py
qlu_toolbox/ui/: pages.py  styles.py
release/: builder-debug.yml  builder-effective-config.yaml
src/: App.vue  assets.ts  env.d.ts  store.ts  styles.css  types.ts
src/components/: BaseModal.vue  BaseSelect.vue  PageHeader.vue  Sidebar.vue  StatusPill.vue  TitleBar.vue
src/pages/: AboutPage.vue  GPACalculatorPage.vue  GradeExportPage.vue  HomePage.vue  SettingsPage.vue  TasksPage.vue  ToolsPage.vue
tests/: test_bridge.py  test_browser_component.py  test_core.py  test_exporter.py  test_gpa_calculator.py  test_ui.py
