[project]
name = "qlu-toolbox"
version = "1.0.1"
description = "面向齐鲁工业大学学生的非官方本地校园效率工具箱"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "C1ouDreamW", email = "cloud_aaa@163.com" },
]
dependencies = [
    "playwright==1.55.0",
]

[dependency-groups]
dev = [
    "pyinstaller==6.15.0",
]

[project.urls]
Homepage = "https://github.com/C1ouDreamW"
Repository = "https://github.com/C1ouDreamW/qlu-toolbox"
Issues = "https://github.com/C1ouDreamW/qlu-toolbox/issues"
Releases = "https://github.com/C1ouDreamW/qlu-toolbox/releases"

[tool.uv]
package = false
link-mode = "copy"
