[project]
name = "sdnu-toolbox"
version = "1.0.0"
description = "面向山东师范大学学生的非官方本地校园效率工具箱"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "LoMoCatAp" },
]
dependencies = [
    "playwright==1.55.0",
]

[dependency-groups]
dev = [
    "pyinstaller==6.15.0",
]

[project.urls]
Homepage = "https://github.com/C1ouDreamW"
Repository = "https://github.com/LoMoCatAp/sdnu-toolbox"
Issues = "https://github.com/LoMoCatAp/sdnu-toolbox/issues"
Releases = "https://github.com/LoMoCatAp/sdnu-toolbox/releases"

[tool.uv]
package = false
link-mode = "copy"
